--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  generic_bloc_provider: ^1.1.0
+  generic_bloc_provider: ^2.0.0-nullsafety.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.4.0
+  firebase_auth: ^3.0.1
+  google_sign_in: ^5.0.7
+  firebase_storage: ^10.0.1
+  cloud_firestore: ^2.4.0
 
 dev_dependencies:
   flutter_test:
